<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <TableLayout
        android:id="@+id/eqpalarmmanage_TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="2" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/product_type"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/eqpalarmmanage_spProductType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/step"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/eqpalarmmanage_spStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/equipment"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/eqpalarmmanage_spEQP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/process_user"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/eqpalarmmanage_spProcessUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/alarm_code"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/eqpalarmmanage_AlarmId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/alarm_name"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/eqpalarmmanage_AlarmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:clickable="false"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/start_time"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/eqpalarmmanage_dtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="text"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/end_time"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/eqpalarmmanage_dtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="text"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/eqpalarmmanage_h0"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="异常原因"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/eqpalarmmanage_h1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="异常开始时间"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/eqpalarmmanage_h2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="异常结束时间"
                android:textSize="15sp" />
        </TableRow>

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <ListView
                    android:id="@+id/lvAlarmHis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </ListView>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/eqpalarmmanage_btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/eqpalarmmanage_btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/exit" />
        </LinearLayout>
    </TableLayout>

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </HorizontalScrollView>

</LinearLayout>